--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -276,7 +276,7 @@ if (TIZEN)
 endif ()
 
 if (CMAKE_CXX_COMPILER_ID MATCHES "GNU" OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-  target_compile_options(ds2 PRIVATE -Wall -Wextra -Werror -Wno-unused-parameter)
+  target_compile_options(ds2 PRIVATE -Wall -Wextra -Wno-unused-parameter)
   if ("${OS_NAME}" MATCHES "Windows")
     target_compile_options(ds2 PRIVATE -Wno-missing-braces -Wno-missing-field-initializers -Wno-tautological-compare)
   elseif ("${OS_NAME}" MATCHES "Darwin")
@@ -287,9 +287,9 @@ if (CMAKE_CXX_COMPILER_ID MATCHES "GNU" OR CMAKE_CXX_COMPILER_ID MATCHES "Clang"
   if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" AND NOT "${CMAKE_CXX_COMPILER_VERSION}" VERSION_LESS "5.1")
     target_compile_options(ds2 PRIVATE -Wsuggest-override)
   endif ()
-  if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-    target_compile_options(ds2 PRIVATE -Winconsistent-missing-override)
-  endif ()
+#  if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+#    target_compile_options(ds2 PRIVATE -Winconsistent-missing-override)
+#  endif ()
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
   target_compile_options(ds2 PRIVATE /W3 /DSTRICT /wd4244 /wd4996)
   target_compile_options(ds2 PRIVATE /MP)
